[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "orcasound_noise"
version = "0.0.1"
dynamic = ["dependencies"]
authors = [
  { name="Caleb Case", email="ccase20@uw.edu" },
  { name="Mitch Haldeman"},
  { name="Grant Savage"}
]
description = "Tools for generating, accessing and analyzing hisorical noise levels in Orcasound hydrophone network"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}